# sdf-xarray

./: .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENCE  README.md  pyproject.toml
.github/workflows/: black.yml  build_publish.yml  lint.yml  tests.yml
docs/: .gitignore  api.rst  conf.py  contributing.rst  getting_started.rst  index.rst  key_functionalities.rst  key_functionality.rst  known_issues.rst  unit_conversion.rst
docs/tutorial_dataset_1d/: 0000.sdf  0001.sdf  0002.sdf  0003.sdf  0004.sdf  0005.sdf  0006.sdf  0007.sdf  0008.sdf  0009.sdf  0010.sdf  0011.sdf  0012.sdf  0013.sdf  0014.sdf  0015.sdf  0016.sdf  0017.sdf  0018.sdf  0019.sdf  0020.sdf  0021.sdf  0022.sdf  0023.sdf  0024.sdf  0025.sdf  0026.sdf  0027.sdf  0028.sdf  0029.sdf  0030.sdf  0031.sdf  0032.sdf  0033.sdf  0034.sdf  0035.sdf  0036.sdf  0037.sdf  0038.sdf  0039.sdf  (+4 more)
docs/tutorial_dataset_2d/: 0000.sdf  0001.sdf  0002.sdf  0003.sdf  0004.sdf  0005.sdf  input.deck
src/sdf_xarray/: __init__.py  accessor.py  csdf.pxd  dataset_accessor.py  plotting.py  sdf_interface.pyx
tests/: test_basic.py  test_cython.py  test_epoch_accessor.py  test_epoch_dataarray_accessor.py  test_epoch_dataset_accessor.py
tests/example_array_no_grids/: 0000.sdf  0001.sdf  README.md  input.deck
tests/example_dist_fn/: 0000.sdf  0001.sdf  0002.sdf  input.deck
tests/example_files/: 0000.sdf  0001.sdf  0002.sdf  0003.sdf  0004.sdf  0005.sdf  0006.sdf  0007.sdf  0008.sdf  0009.sdf  0010.sdf  input.deck
tests/example_files_1D/: 0000.sdf  0003.sdf  0006.sdf  0008.sdf  README.md
tests/example_files_2D_moving_window/: 0000.sdf  0001.sdf  0002.sdf  0003.sdf  0004.sdf  input.deck
tests/example_files_3D/: 0000.sdf  0001.sdf  input.deck
tests/example_mismatched_files/: 0000.sdf  0001.sdf  0002.sdf
tests/example_two_probes_2D/: input.deck
