[build-system]
requires = [
  "scikit-build-core>=0.3",
  "setuptools_scm",
  "numpy>=2.0.0",
  "cython>=3.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "sdf-xarray"
dynamic = ["version"]
license = { file = "LICENCE" }
readme = "README.md"
authors = [
  { name = "Peter Hill", email = "peter.hill@york.ac.uk" },
  { name = "Joel Adams", email = "joel.adams@york.ac.uk" },
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0.0",
  "xarray>=2024.1.0",
  "dask>=2024.7.1",
  "cython>=3.0",
]
description = "Provides a backend for xarray to read SDF files as created by the EPOCH plasma PIC code."

[project.optional-dependencies]
docs = [
  "sphinx>=5.3",
  "sphinx_autodoc_typehints>=1.19",
  "sphinx-book-theme>=0.4.0rc1",
  "sphinx-argparse-cli>=1.10.0",
  "sphinx-inline-tabs",
]
test = ["pytest >= 3.3.0", "dask[complete]"]
lint = ["ruff"]
build = ["cibuildwheel[uv]"]
jupyter = ["dask[diagnostics]", "ipykernel>=6.29.5"]

[project.entry-points."xarray.backends"]
sdf_engine = "sdf_xarray:SDFEntrypoint"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/sdf_xarray/_version.py"]

[tool.setuptools_scm]
write_to = "src/sdf_xarray/_version.py"

[tool.cibuildwheel]
build-frontend = "build[uv]"
skip = ["*-win32", "*-manylinux_i686", "pp*", "*musllinux*"]
test-extras = ["test"]
test-command = "pytest {project}/tests"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = true }]
